# polznak

./: .gitignore  README.md  docker-compose.yml
core/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py
core/android/app/: build.gradle
core/android/app/src/debug/: AndroidManifest.xml
core/android/app/src/main/: AndroidManifest.xml
core/android/app/src/main/kotlin/ru/abd/mobile_app/: MainActivity.kt
core/chats/: app.py
core/chats/db/: __init__.py  models.py
core/core/: asgi.py  dumped.json  settings.py  urls.py
core/ios/Runner.xcodeproj/: project.pbxproj
core/locale/ru_ru/LC_MESSAGES/: django.po
core/polznak_entities/: admin.py  apps.py  models.py  routers.py  serializers.py  urls.py  validators.py  views.py
core/polznak_entities/migrations/: 0001_initial.py  0002_auto_20211106_1014.py  0002_comment.py  0003_alter_useropinion_unique_together.py  0003_useropinion.py  0004_alter_grades_grade.py  0004_grades.py  0005_alter_conversation_initiator.py
core/recommendations/: models.py  urls.py  views.py
core/recommendations/migrations/: 0001_initial.py
core/recommendations/utils/: __init__.py  likes.py
core/token_auth/: admin.py  backends.py  middleware.py  models.py  routers.py  schemas.py  urls.py  views.py
core/token_auth/management/commands/: reset_token.py
core/token_auth/migrations/: 0001_initial.py
http_tests/: auth.http  post.http
mobile_client/: analysis_options.yaml  pubspec.yaml
parsing/: .~lock.fake_users.json#  api_types.py  data.json  fake_users.json  make_fake_likes.py  make_fake_posts.py  make_fake_users.py  (+2 more)
(+93 files in other folders)
