[tool.poetry]
name = "polznak-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "~=4.0"
djangorestframework = "~=3.12.4"
uvicorn = "~=0.16.0"
nltk = "~=3.6.5"
fastapi = "~=0.70.1"
SQLAlchemy = "^1.4.28"
sqlacodegen = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
