[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ABD", email = "n"},
]
dependencies = [
    "Django~=3.2",
    "django-token>=0.1.3",
    "djangorestframework~=3.12.0",
    "uvicorn>=0.16.0",
    "fastapi>=0.70.1",
    "sqlalchemy>=1.4.29",
    "drf-yasg>=1.20.0",
    "psycopg2-binary>=2.9.3",
    "nltk>=3.6.7",
    "django-cors-headers>=3.10.1",
]
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
